--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <div class="main-visual">
     <picture>
-      <source media="(min-width: 768px)" srcset="images/sp_main-visual.jpg">
-      <img src="images/sp_main-visual.jpg" alt=""複数の青いカップのコーヒー></img>
+      <source media="(min-width: 768px)" srcset="images/pc_main-visual.jpg">
+      <img src="images/sp_main-visual.jpg" alt="複数の青いカップのコーヒー"></img>
     </picture>
   </div>
 
